# 30days-streamlit

./: README.md  challenge_day1_18.py  data.json  pyproject.toml  streamlit_app.py
pages/: challenge_day02.py  challenge_day03.py  challenge_day04.py  challenge_day05.py  challenge_day06.py  challenge_day07.py  challenge_day08.py  challenge_day09.py  challenge_day10.py  challenge_day11.py  challenge_day12.py  challenge_day14.py  challenge_day15.py  challenge_day16.py  challenge_day17.py  challenge_day19.py  challenge_day21.py  challenge_day22.py  challenge_day23.py  challenge_day24.py  challenge_day25.py  challenge_day26.py  challenge_day27.py  challenge_day28.py  challenge_day30.py
