[tool.poetry]
name = "30days-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.33.0"
ydata-profiling = "^4.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"